# spark-mpi

./: CMakeLists.txt  README.md  README.txt
cmake/Modules/: FindCUB.cmake  FindCUSP.cmake  FindGSL.cmake  FindGlog.cmake  FindMPI_SRC.cmake  FindOMPI.cmake  FindTHRUST.cmake
examples/: CMakeLists.txt
examples/kafka/: README.txt  allreduce.py  allreduce_consumer.py  allreduce_producer.py
examples/mpi/: CMakeLists.txt  README.txt  allreduce.py  allreduce_sbatch.sh  mpi-demo.cu
examples/pmiserv/: README.txt  allreduce.py  allreduce.slurm.py  allreduce_pmi_sbatch.sh  allreduce_pmiserv_sbatch.sh  launcher.py
examples/pmixsrv/: CMakeLists.txt  README.txt  allreduce.py  launcher.py
examples/server-client/: CMakeLists.txt  README.txt  rdma-server.py  rdma-worker.py
examples/spark/: CMakeLists.txt  README.txt  allreduce.ipynb  collect.py  collect_sbatch.sh
examples/spark-mpi/: CMakeLists.txt  README.txt  allreduce.py  allreduce.sh.hydra  allreduce.slurm.py.hydra  spark-mpi.py
examples/spark/.ipynb_checkpoints/: allreduce-checkpoint.ipynb
include/: CMakeLists.txt  RDMACommunicator.hpp  python_sparkmpi.hpp  rdma_address.hpp
include/caffe/: internal_thread.hpp
include/caffe/util/: blocking_queue.hpp  math_functions.hpp  math_functions.hpp.orig
include/orte/mca/odls/sparkmpi/: odls_sparkmpi.h
include/util/: rdma.hpp  socket.hpp
python/: CMakeLists.txt  python_sparkmpi.cpp  sparkmpi.i
python/sparkmpi/: __init__.py  main.py
src/: CMakeLists.txt  RDMACommunicator.cpp  RDMACommunicator.cu  pmiserv.cpp  rdma-server.cpp  rdma-worker.cpp  rdma_address.cpp
src/caffe/: internal_thread.cpp
src/caffe/util/: blocking_queue.cpp  math_functions.cpp
src/gforker/: CMakeLists.txt  mpiexec_usage.c  pmiserv.cpp
src/hydra/: CMakeLists.txt  pmip_cb.c
src/pmix/: CMakeLists.txt  orterun.c
src/pmix/orte/mca/odls/sparkmpi/: odls_sparkmpi_component.c  odls_sparkmpi_module.c
src/util/: rdma.cpp  socket.cpp
